<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_movies"
        android:icon="@drawable/selector_movies"
        android:title="@string/title_movies" />

    <item
        android:id="@+id/navigation_tvshows"
        android:icon="@drawable/selector_tvshows"
        android:title="@string/title_tvshows" />

    <item
        android:id="@+id/navigation_favourites"
        android:icon="@drawable/selector_favourites"
        android:title="@string/title_favourites" />

</menu>